--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "zerodha-api"
-version = "0.1.19"
+version = "0.1.20"
 description = "Wrapper for Zerodha Kite API"
 authors = ["mdalvi <milind.dalvi@protonmail.com>"]
 license = "MIT"
@@ -16,6 +16,7 @@ pytest = "^8.3.2"
 pyyaml = "^6.0.2"
 pytz = "^2024.1"
 pandas = "^2.2.2"
+retrying = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.3.2"
