--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,14 @@ retrying = "^1.3.4"
 [tool.poetry.dev-dependencies]
 pytest = "^8.3.2"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+addopts = "--cov=./ --cov-report=xml --cov-report=term-missing"
+testpaths = ["tests"]
